[gd_scene load_steps=4 format=4 uid="uid://dla7fmvvo2eyt"]

[ext_resource type="PackedScene" uid="uid://nx2prtbxim66" path="res://Prefab/GUI/DialogBox/DialogBoxGeneral/DialogPopup.tscn" id="1"]
[ext_resource type="Script" uid="uid://c1amc1kbvildo" path="res://Prefab/GUI/DialogBox/DialogBoxGeneral/DialogBoxLevelEditorNewLevel/DialogBoxLevelEditorNewLevel.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="3"]

[node name="DialogBoxLevelEditorNewLevel" instance=ExtResource("1")]
script = ExtResource("2")

[node name="MarginContainer2" parent="Layer/Control" index="0"]
offset_bottom = 108.0

[node name="TextLabel" parent="Layer/Control/MarginContainer2/MarginContainer/CenterContainer" index="0"]
custom_minimum_size = Vector2(300, 0)
text = "[center][font_size=24]选择模板[/font_size][/center]
[center][font_size=16]选择你想创建的关卡模板[/font_size][/center]
[center][font_size=16][/font_size][/center]"
autowrap_mode = 2

[node name="ButtonContainer" parent="Layer/Control" index="1"]
offset_left = -181.0
offset_top = 7.016
offset_right = 180.0
offset_bottom = 53.016
theme_override_constants/separation = 5

[node name="NormalButton" parent="Layer/Control/ButtonContainer" index="0" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "基础"

[node name="ConveyorButton" parent="Layer/Control/ButtonContainer" index="1" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "传送带"

[node name="CancleButton" parent="Layer/Control/ButtonContainer" index="2" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[connection signal="pressed" from="Layer/Control/ButtonContainer/NormalButton" to="." method="NormalButtonPressed"]
[connection signal="pressed" from="Layer/Control/ButtonContainer/ConveyorButton" to="." method="ConveyorButtonPressed"]
[connection signal="pressed" from="Layer/Control/ButtonContainer/CancleButton" to="." method="CancleButtonPressed"]
